fix lg header spacing.

--- a/www/themes/borg/css/components-menus.css
+++ b/www/themes/borg/css/components-menus.css
@@ -148,6 +148,9 @@
     margin-top: 7px;
     display: flex;
   }
+  .borg-header-menu {
+    margin-top: 8px;
+  }
   .menu-main,
   .menu-account,
   .menu-demo {
